--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trail Testing</title>
+    <title>Home | Shahjad S</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -2003,7 +2003,7 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                <button id="media<%= i %>-prev-2" class=" scroll-btn  "><img
+                                                <button id="media-<%= i %>-prev-2" class=" scroll-btn  "><img
                                                         src="images/left arrow.svg" width="30" height="30"
                                                         alt=""></button>
 
