--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2895,7 +2895,7 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                <button id="media<%= i %>-prev-3" class=" scroll-btn  "><img
+                                                <button id="media-<%= i %>-prev-3" class=" scroll-btn  "><img
                                                         src="images/left arrow.svg" width="30" height="30"
                                                         alt=""></button>
 
