reduced scroll code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3178,7 +3178,7 @@
                 </div>
                 <div class="d-flex mb-5 flex-column align-items-center ">
                     <p class="mb-1">Connect me on</p>
-                    <button id="email-btn-1" data-email="<%= data.email %>"  class="connect-btn fw-bold ">
+                    <button id="email-btn-1" data-email="<%= data.email %>"  class="connect-btn email-btn fw-bold ">
                             <%= data.email %>
                         </button>
 
@@ -3313,7 +3313,7 @@
 
                 <div class="d-flex mb-5 flex-column align-items-center ">
                     <p class="mb-1">Connect me on</p>
-                    <button id="email-btn-2" data-email="<%= data.email %>" class="connect-btn fw-bold ">
+                    <button id="email-btn-2" data-email="<%= data.email %>" class="email-btn connect-btn fw-bold ">
                             <%= data.email %>
                         </button>
 
@@ -3384,7 +3384,7 @@
 
                                 <div class="d-flex mb-5 mt-5 flex-column align-items-center ">
                                     <p class="mb-1 connect-label ">Connect me on</p>
-                                    <button id="email-btn-3" data-email="<%= data.email %>" class="connect-btn fw-bold ">
+                                    <button id="email-btn-3" data-email="<%= data.email %>" class=" email-btn connect-btn fw-bold ">
                                             <%= data.email %>
                                         </button>
 
