seperate pages for menu items created,404 page created

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -282,7 +282,7 @@
 
 
                             </div>
-                            <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                            <a href="/brands" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -551,7 +551,7 @@
 
 
                             </div>
-                            <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                            <a href="/investments" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -818,7 +818,7 @@
 
 
                             </div>
-                            <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                            <a href="/holdings" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -1009,7 +1009,7 @@
                                 <div class="section-underline ms-1"></div>
                             </div>
 
-                            <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                            <a href="/media" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -1169,7 +1169,7 @@
 
                             </div>
 
-                            <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                            <a href="/events" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -1447,7 +1447,7 @@
                             </h1>
                             <div class="section-underline ms-1"></div>
                         </div>
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/brands" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -1630,7 +1630,7 @@
                             <div class="section-underline ms-1"></div>
                         </div>
 
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/investments" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -1810,7 +1810,7 @@
                             </h1>
                             <div class="section-underline ms-1"></div>
                         </div>
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/holdings" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -1991,7 +1991,7 @@
                             <div class="section-underline ms-1"></div>
                         </div>
 
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/media" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -2129,7 +2129,7 @@
                             </h1>
                             <div class="section-underline ms-1"></div>
                         </div>
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/events" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -2360,7 +2360,7 @@
                             </h1>
                             <div class="section-underline ms-1"></div>
                         </div>
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/brands" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -2417,13 +2417,13 @@
 
                                         <div class="d-flex align-items-center mt-4 ">
 
-                                            
+
 
                                             <p class="main-desc px-4  ">
                                                 <%= data.menu.brands[0].mainContent %>
                                             </p>
 
-                                            
+
 
 
 
@@ -2489,14 +2489,14 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                
+
 
                                                 <p class="main-desc px-4  ">
                                                     <%= data.menu.brands[i].mainContent %>
                                                 </p>
 
 
-                                                
+
 
 
 
@@ -2534,7 +2534,7 @@
                             <div class="section-underline ms-1"></div>
                         </div>
 
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/investments" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -2588,13 +2588,13 @@
 
                                         <div class="d-flex align-items-center mt-4 ">
 
-                                            
+
 
                                             <p class="main-desc px-4  ">
                                                 <%= data.menu.investments[0].mainContent %>
                                             </p>
 
-                                            
+
 
 
 
@@ -2660,14 +2660,14 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                
+
 
                                                 <p class="main-desc px-4  ">
                                                     <%= data.menu.investments[i].mainContent %>
                                                 </p>
 
 
-                                                
+
 
 
                                             </div>
@@ -2704,7 +2704,7 @@
                             <div class="section-underline ms-1"></div>
                         </div>
 
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/holdings" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -2758,13 +2758,13 @@
 
                                         <div class="d-flex align-items-center mt-4 ">
 
-                                            
+
 
                                             <p class="main-desc px-4  ">
                                                 <%= data.menu.holdings[0].mainContent %>
                                             </p>
 
-                                            
+
 
 
                                         </div>
@@ -2829,14 +2829,14 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                
+
 
                                                 <p class="main-desc px-4  ">
                                                     <%= data.menu.holdings[i].mainContent %>
                                                 </p>
 
 
-                                                
+
 
 
                                             </div>
@@ -2873,7 +2873,7 @@
                             <div class="section-underline ms-1"></div>
                         </div>
 
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/media" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
 
@@ -2902,13 +2902,13 @@
 
                                         <div class="d-flex align-items-center mt-4 ">
 
-                                            
+
 
                                             <p class="main-desc px-4  ">
                                                 <%= data.menu.media[0].mainContent %>
                                             </p>
 
-                                            
+
 
 
 
@@ -2953,14 +2953,14 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                
+
 
                                                 <p class="main-desc px-4  ">
                                                     <%= data.menu.media[i].mainContent %>
                                                 </p>
 
 
-                                                
+
 
 
 
@@ -3002,7 +3002,7 @@
                             <div class="section-underline ms-1"></div>
                         </div>
 
-                        <a href="" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
+                        <a href="/events" class=" text-decoration-none ms-auto me-5 mt-3 mb-3 ">View all</a>
 
 
                         <div id="events-carousel-3" class="carousel slide  ">
@@ -3030,13 +3030,13 @@
 
                                         <div class="d-flex align-items-center mt-4 ">
 
-                                            
+
 
                                             <p class="main-desc px-4  ">
                                                 <%= data.menu.events[0].mainContent %>
                                             </p>
 
-                                            
+
 
 
                                         </div>
@@ -3080,13 +3080,13 @@
 
                                             <div class="d-flex align-items-center mt-4 ">
 
-                                                
+
 
                                                 <p class="main-desc px-4  ">
                                                     <%= data.menu.events[i].mainContent %>
                                                 </p>
 
-                                                
+
 
 
 
